createElement should not transmit exceptions but report them.

BUG=652157,658066

Review-Url: https://codereview.chromium.org/2443543002
Cr-Commit-Position: refs/heads/master@{#427306}

Former-commit-id: a21493ce8e12e552cd51c85523d451357bd427e1